--- a/4_Results.tex
+++ b/4_Results.tex
@@ -1,7 +1,7 @@
 \newpage
 \clearpage
 \section{Results and Discussion}
-In this chapter, the graphs of the $\omega$ and $\phi$ yields calculated in \ref{Analysis:Dimuon:Yield:Results} are presented as the conclusion.
+This chapter presents the graphs of the $\omega$ and $\phi$ yields calculated in \ref{Analysis:Dimuon:Yield:Results} as the conclusion.
     \begin{figure}[htbp]
         \centering
         % Left side figure
@@ -20,16 +20,23 @@ In this chapter, the graphs of the $\omega$ and $\phi$ yields calculated in \ref
             \label{fig:phi_yield}
         \end{minipage}
     \end{figure}
-    Figures \ref{fig:omega_yield} and \ref{fig:phi_yield} show the transverse momentum spectra of the production yields of $\omega$ and $\phi$. The horizontal axis represents the transverse momentum of $\omega$ and $\phi$, while the vertical axis represents the number of counts.  
-    Since these spectra are uncorrected, no physical discussion can be made. However, it is observed that the yields decrease as the transverse momentum increases. This behavior is similar to the $p_T$ spectrum of $\phi$ production cross-sections measured using forward dimuons in Run 2. Although the $p_T$ spectrum of $\omega$ production cross-sections has not been published, the present results exhibit a similar trend to those measured in Run 2.  
+    Figures \ref{fig:omega_yield} and \ref{fig:phi_yield} show the transverse momentum spectra of the production yields of $\omega$ and $\phi$. The horizontal axis represents the transverse momentum of $\omega$ and $\phi$, while the vertical axis represents the number of counts.
+    Since these spectra are uncorrected, no physical discussion can be made. However, it is observed that the yields decrease as the transverse momentum increases. This behaviour resembles the $p_T$ spectrum of $\phi$ production cross-sections measured using forward dimuons in Run 2. Although the $p_T$ spectrum of $\omega$ production cross-sections has not been published, the present results exhibit a similar trend to those measured in Run 2.  
     Here, it is necessary to consider the contribution of $\rho \rightarrow \mu\mu$. The $\rho$ meson has a mean mass of $m = 775.26$ MeV and a full width of $\Gamma = 149.1$ MeV, leading to a broader distribution than $\omega$, which is located at a very similar mass position. Given that the signal extraction method used in this analysis accounts for the broad width of the $\rho$, it is considered that the peak structure of $\omega$ is not significantly affected.  
-    As a future prospect, improving the resolution of single-muon kinematic variables will enhance the mass resolution, making the $\omega$ peak sharper and allowing better separation between the $\rho$ and $\omega$ peaks. Additionally, by applying acceptance-efficiency corrections using the forward detector system for $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ dimuon reconstruction, the integrated luminosity can be determined from the event counts. This will enable the calculation of production cross-sections from the present results, allowing for direct comparison with Run 2 results.
-
-
-    Discuss single muon track reconstruction, \ref{matching improvements}, and future prospects as well. In the current muon track reconstruction algorithm, the pseudorapidity (\(\eta\)) and azimuthal angle (\(\phi\)) of the muon are determined using the MFT standalone track to improve their precision. However, the DCA is calculated using parameters obtained from the global fit of the MFT-MCH-MID track. Since using tracks closer to the collision point allows for more precise measurements unaffected by the absorber, it is expected that the accuracy of the DCA measurement can be improved by using the parameters of the MFT track that constitutes the MFT-MCH-MID track.Furthermore, improvements in MFT-MCH matching are also needed. As seen in \ref{purity_of_pt}, the matching purity significantly decreases at low transverse momentum (\( p_T \)). This degradation occurs because low-\( p_T \) muons undergo multiple scattering and energy loss in the absorber, making MFT-MCH matching more challenging. However, this study demonstrated that applying a \( \Delta \eta \) cut improves matching purity in the low-\( p_T \) region. This result suggests that continued analysis can further enhance matching purity.
-
-    The ultimate goal is to measure the changes in the mass distribution of light vector mesons in lead-lead collision events. This study has revealed several remaining challenges, including issues with matching purity at low transverse momentum and the development of the track reconstruction algorithm. Additionally, improving the quality of muon tracks in high-multiplicity events in heavy-ion collisions is another challenge. As a first step, efforts will be focused on improving matching purity and developing the track reconstruction algorithm in proton-proton collisions, where the event multiplicity is relatively low. Subsequently, similar improvements will be pursued in heavy-ion collisions. Ultimately, the aim is to clarify the changes in the mass distribution of light vector mesons due to QGP formation and observe the restoration of chiral symmetry.
+    As a prospect, improving the resolution of single-muon kinematic variables will enhance the mass resolution, making the $\omega$ peak sharper and allowing better separation between the $\rho$ and $\omega$ peaks. Additionally, by applying acceptance-efficiency corrections using the forward detector system for $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ dimuon reconstruction, the integrated luminosity can be determined from the event counts. This will enable the calculation of production cross-sections from the present results, allowing for direct comparison with Run 2 results.
+   
+   
+    Discuss single muon track reconstruction, \ref{matching improvements}, and prospects. In the current muon track reconstruction algorithm, the pseudorapidity (\(\eta\)) and azimuthal angle (\(\phi\)) of the muon are determined using the MFT standalone track to improve their precision. However, the DCA is calculated using parameters obtained from the global fit of the MFT-MCH-MID track. Since using tracks closer to the collision point allows for more precise measurements unaffected by the absorber, it is expected that the accuracy of the DCA measurement can be improved by using the parameters of the MFT track that constitutes the MFT-MCH-MID track. Furthermore, improvements in MFT-MCH matching are also needed. As seen in \ref{purity_of_pt}, the matching purity significantly decreases at low transverse momentum (\( p_T \)). This degradation occurs because low-\( p_T \) muons undergo multiple scattering and energy loss in the absorber, making MFT-MCH matching more challenging. However, this study demonstrated that applying a \( \Delta \eta \) cut improves matching purity in the low-\( p_T \) region. This result suggests that continued analysis can further enhance matching purity.
+   
+    The ultimate goal is to measure the changes in the mass distribution of light vector mesons in lead-lead collision events. This study has revealed several remaining challenges, including issues with matching purity at low transverse momentum and the development of the track reconstruction algorithm. Another challenge is improving the quality of muon tracks in high-multiplicity events in heavy-ion collisions. As a first step, efforts will be focused on improving matching purity and developing the track reconstruction algorithm in proton-proton collisions, where the event multiplicity is relatively low. 
+    Subsequently, similar improvements will be pursued in heavy-ion collisions. 
+    Going forward, the aim is to clarify the changes in the mass distribution of light vector mesons due to QGP formation and observe the restoration of chiral symmetry.
 \section{Summary}
-    In this study, we analyzed forward muon pairs in ALICE from $\sqrt{s} = 13.6$ TeV $pp$ collisions. The peaks corresponding to $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ in the dimuon mass distribution were extracted by fitting them with Gaussian functions, while other components were fitted with an exponential function. These analyses were performed for each transverse momentum range, and the transverse momentum spectra of $\omega$ and $\phi$ yields were presented. Additionally, an analysis was conducted to improve the matching purity between the MFT, introduced in Run 3, and the downstream detectors. By applying a cut on the difference in $\eta$ between the MFT Track and the MCH Track that constitute the Global Track, we demonstrated the ability to remove Fake Match tracks. Furthermore, the optimal MFT-MCH matching $\chi^2$ cut was determined using the signal yields of $\omega$ and $\phi$. As a future prospect, further improvements in the quality of Single Muon Tracks will be pursued. Ultimately, this study aims to clarify the changes in the mass distribution of light vector mesons caused by the formation of the QGP in lead-lead nuclear collisions.
-
+    In this study, we analyzed forward muon pairs in ALICE from $\sqrt{s} = 13.6$ TeV $pp$ collisions. 
+    The peaks corresponding to $\omega \rightarrow \mu\mu$ and $\phi \rightarrow \mu\mu$ in the dimuon mass distribution were extracted with Gaussian functions. In contrast, other components were fitted with an exponential function. 
+    These analyses were performed for each transverse momentum range, and the transverse momentum spectra of $\omega$ and $\phi$ yields were presented. 
+    Additionally, an analysis was conducted to improve the purity of the matching MFT and MCH.
+    By applying a cut on the difference in $\eta$ between the MFT Track and the MCH Track that constitute the Global Track, we demonstrated the ability to remove Fake Match tracks.
+    Furthermore, the optimal MFT-MCH matching $\chi^2$ cut was determined using the signal yields of $\omega$ and $\phi$.
+    As a prospect, further improvements in the quality of Single Muon Tracks will be pursued. Ultimately, this study aims to clarify the changes in the mass distribution of light vector mesons caused by the formation of the QGP in lead-lead nuclear collisions.
 %this is test.
